--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-
-config/settings.php
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
