--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/passport": "^8.3",
+        "laravel/tinker": "^2.0",
+        "vatsim/sso-laravel": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
