--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="VATSCA Handover"
 APP_ENV=local
 APP_KEY=base64:QQtY0l2Ccov23rVE3wgmbIimxamuZpY0NQw2Da8utDY=
 APP_DEBUG=true
