--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "jquery": "^3.4.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
