Fixed some erroring URLs

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-MIX_APP_URL="${APP_URL}"#Used to set Vue components base url
+MIX_APP_URL="${APP_URL}"
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
