--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_KEY=base64:M/hRTpbUnt/MmI6sB2FdOsI0739LKI5sotJ65OYonoM=
 APP_DEBUG=true
 APP_URL="https://localhost/handover/public"
 
+APP_PP="http://vatsim-scandinavia.org/wp-content/uploads/2019/05/Data-Protection-Policy-VATSCA.pdf"
+APP_DPO_MAIL="dpo@vatsim-scandinavia.org"
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
