--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_PORT=3306
 DB_DATABASE=handover
 DB_USERNAME=root
 DB_PASSWORD=
-DB_TABLE_PREFIX=core_
+DB_TABLE_PREFIX=
 
 SSO_URL="http://sso.hardern.net/server/"
 SSO_KEY=SSO_DEMO_VACC
