Removed app_key from git

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="VATSCA Handover"
 APP_ENV=local
-APP_KEY=base64:M/hRTpbUnt/MmI6sB2FdOsI0739LKI5sotJ65OYonoM=
+APP_KEY=
 APP_DEBUG=true
 APP_URL="https://localhost/handover/public"
 
