--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
-        "vue-template-compiler": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     }
 }
