Cleaned up vacc env vars

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL="https://localhost/handover/public"
 
-APP_PP_URL="http://vatsim-scandinavia.org/wp-content/uploads/2019/09/Data-Protection-Policy-ACCSCA.pdf"
-APP_PP_DATE="17. september 2019"
+APP_VACC="VATSIM Scandinavia"
+APP_VACC_CONTACT="director@vatsim-scandinavia.org"
+APP_DPP_URL="http://vatsim-scandinavia.org/wp-content/uploads/2019/09/Data-Protection-Policy-ACCSCA.pdf"
+APP_DPP_DATE="17. september 2019"
 APP_DPO_MAIL="dpo@vatsim-scandinavia.org"
 
 LOG_CHANNEL=stack
