Updated .env.example with newest DPP

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ APP_URL="https://handover.local"
 
 APP_VACC="VATSIM Scandinavia"
 APP_VACC_CONTACT="director@vatsim-scandinavia.org"
-APP_DPP_URL="http://vatsim-scandinavia.org/wp-content/uploads/2019/09/Data-Protection-Policy-ACCSCA.pdf"
-APP_DPP_DATE="17. september 2019"
+APP_DPP_URL="https://vatsim-scandinavia.org/applications/core/interface/file/attachment.php?id=1994"
+APP_DPP_DATE="20. February 2020"
 APP_DPO_MAIL="dpo@vatsim-scandinavia.org"
 
 LOG_CHANNEL=stack
