--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
-    "devDependencies": {
-        
-    },
+    "devDependencies": {},
     "dependencies": {
-        "@fortawesome/fontawesome-pro": "^5.11.2",
-        "bootstrap": "^4.4.1",
+        "@fortawesome/fontawesome-pro": "^5.14.0",
         "axios": "^0.19",
-        "cross-env": "^7.0",
-        "jquery": "^3.4.1",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "bootstrap": "^4.5.0",
+        "cross-env": "^7.0.2",
+        "jquery": "^3.5.1",
+        "laravel-mix": "^5.0.4",
+        "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
+        "sass": "^1.26.10",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.11"
