--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass": "^1.26.11",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.12",
+        "vue-moment": "^4.1.0",
         "vue-template-compiler": "^2.6.12"
     }
 }
