--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
 APP_NAME="VATSCA Handover"
-APP_OWNER='Subdivision Name'
+APP_OWNER='VATSIM Scandinavia'
 APP_OWNER_SHORT='SCA'
+APP_OWNER_CONTACT="director@vatsim-scandinavia.org"
 
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
 APP_URL="https://handover.local"
 
-APP_VACC="VATSIM Scandinavia"
-APP_VACC_CONTACT="director@vatsim-scandinavia.org"
 APP_DPP_URL="https://vatsim-scandinavia.org/applications/core/interface/file/attachment.php?id=1994"
 APP_DPP_DATE="20. February 2020"
 APP_DPO_MAIL="dpo@vatsim-scandinavia.org"
