--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,22 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2.5",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/passport": "^8.3",
+        "laravel/framework": "^7.0",
+        "laravel/passport": "^9.0",
         "laravel/tinker": "^2.0",
-        "league/oauth2-client": "^2.4",
-        "lcobucci/jwt": "3.3.3"
+        "laravel/ui": "2.0",
+        "lcobucci/jwt": "3.3.3",
+        "league/oauth2-client": "^2.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
