--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,19 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^8.0",
+        "php": "^8.0.2",
+        "laravel/framework": "^9.0",
         "laravel/passport": "^10.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
-        "lcobucci/jwt": "3.3.3",
-        "league/oauth2-client": "^2.4"
+        "league/oauth2-client": "^2.6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0"
     },
     "config": {
