--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,9 @@ VATSIM_OAUTH_CLIENT=
 VATSIM_OAUTH_SECRET=
 VATSIM_OAUTH_SCOPES=full_name,email,vatsim_details,country
 
+SENTRY_LARAVEL_DSN=null
+SENTRY_TRACES_SAMPLE_RATE=0.0
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
