--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,21 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "laravel/framework": "^9.0",
-        "laravel/passport": "^10.0",
+        "php": "^8.1.10",
+        "laravel/framework": "^10.0",
+        "laravel/passport": "^11.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0",
+        "laravel/ui": "^4.0",
         "league/oauth2-client": "^2.6.1",
-        "sentry/sentry-laravel": "^2.12"
+        "sentry/sentry-laravel": "^3.7.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "spatie/laravel-ignition": "^1.0",
-        "fzaninotto/faker": "^1.9.1",
+        "spatie/laravel-ignition": "^2.0",
+        "fakerphp/faker": "^1.23.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -44,7 +44,6 @@
             "Database\\Seeders\\": "database/seeders/"
         }
     },
-    "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
