--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,12 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=360
+
+VITE_THEME_PRIMARY="#1a475f"
+VITE_THEME_SECONDARY="#484b4c"
+VITE_THEME_TERTIARY="#011328"
+VITE_THEME_INFO="#17a2b8"
+VITE_THEME_SUCCESS="#41826e"
+VITE_THEME_WARNING="#ff9800"
+VITE_THEME_DANGER="#b63f3f"
+VITE_THEME_BORDER_RADIUS="2px"
