--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.0.0",
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "@vitejs/plugin-vue": "^5.2.1",
         "axios": "^1.6.2",
-        "bootstrap": "^4.5.3",
+        "bootstrap": "^5.3.0",
         "cross-env": "^7.0.3",
         "jquery": "^3.5.1",
-        "laravel-mix": "^6.0.18",
+        "laravel-vite-plugin": "^1.1.1",
         "lodash": "^4.17.20",
         "popper.js": "^1.16.1",
         "postcss": "^8.4.31",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.39.0",
+        "sass": "1.77.6",
         "sass-loader": "^12.0",
-        "vue": "^2.6.12",
+        "vite": "^6.0.6",
+        "vue": "^3.0",
         "vue-loader": "^15.9.6",
         "vue-moment": "^4.1.0",
         "vue-template-compiler": "^2.6.12"
