--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
-public/css/*
-public/js/*
+public/build/*
 public/fonts/vendor/*
 /storage/*.key
 /vendor
