--- a/package.json
+++ b/package.json
@@ -12,16 +12,12 @@
         "cross-env": "^7.0.3",
         "jquery": "^3.5.1",
         "laravel-vite-plugin": "^1.1.1",
-        "lodash": "^4.17.20",
-        "popper.js": "^1.16.1",
-        "postcss": "^8.4.31",
-        "resolve-url-loader": "^3.1.2",
+        "resolve-url-loader": "^5.0",
         "sass": "1.77.6",
         "sass-loader": "^12.0",
         "vite": "^6.0.6",
         "vue": "^3.0",
         "vue-loader": "^15.9.6",
-        "vue-moment": "^4.1.0",
-        "vue-template-compiler": "^2.6.12"
+        "vue-moment": "^4.1.0"
     }
 }
